fixing style bug on firefox

--- a/src/client/css/puzzles/xyflyer.less
+++ b/src/client/css/puzzles/xyflyer.less
@@ -401,6 +401,10 @@ body {
             margin-top: 12px;
             .level {
                 padding: 12px;
+            
+                &:last-child {
+                    padding-right: 0;
+                }
             }
         }
     } 
